test/libsolidity/syntaxTests/nameAndTypeResolution/array_of_undeclared_type.sol
contract c {
    a[] public foo;
}
// ----
// DeclarationError: (17-18): Identifier not found or not unique.
